trunk/Archive2/94/76d62fa3e0d12a/output
main.cpp:9:5: error: static_assert failed "haha isn't equal"
    static_assert(std::is_same<decltype(std::forward<void()>(g)), void(&&)()>::value, "haha isn't equal");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
